Add support parse flexible date